--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,23 +66,23 @@
     <string name="version_label">Version</string>
     <string name="version_number">1.0</string>
 
-   <!-- <string name="about_app">அல்லாஹ்விற்கே !
-        \n\nஉமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம்\n(அல்குர்ஆன் மற்றும் நபிமொழிப் பணியாளர்)
-        தாருல் ஹுதா, சென்னை-1.
-        \ndarulhuda.chennai@gmail.com,
-        muftiomar@gmail.com
-        \n+91 98401 74121,\n+91 98844 69044,\n+91 44 25247866</string>-->
-
-    <string name="about_app">அல்லாஹ்விற்கே எல்லாப் புகழும்! முஹம்மது (ஸல்) அவர்கள் மீதும்
-   அவர்களது குடும்பத்தார்,
+    <string name="about_app">அல்லாஹ்விற்கே எல்லாப் புகழும்! முஹம்மது (ஸல்) அவர்கள் மீதும் அவர்களது குடும்பத்தார்,
        தோழர்கள், அவர்களைப் பின்பற்றும் நல்லோர் அனைவர் மீதும் ஸலவாத்தும் ஸலாமும் உண்டாகட்டும்.
        \n\n
-        Dummy text.
+        அஷ்ஷைக் ஸயீது இப்னு அலீ அல்கஹ்தானி அவர்களின் " குர்ஆன், ஹதீஸ் கூறும் பிரார்த்தனை "
+        என்னும் பிரசித்திபெற்ற அரபி நூலின் தமிழாக்கம் இது.
        \n\nஎந்நேரமும் உங்கள் கரத்தில் இருக்கவேண்டிய இந்நூலை ஒரு செயலியாக நாங்கள் வடிவமைத்து
-       உங்களுக்குத் தருவதற்கு அல்லாஹ் அருள் புரிந்தான்.\n\nபயன்பெறுங்கள், பிறருக்கு அறிமுகப்படுத்துங்கள்!
-       \n\nஉமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம்\n(அல்குர்ஆன் மற்றும் நபிமொழிப் பணியாளர்)
+       உங்களுக்குத் தருவதற்கு அல்லாஹ் அருள் புரிந்தான்.
+        \n\n
+        இதை வெளியிட அங்கிகரித்த முப்தி உமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம் அவர்களுக்கு அல்லாஹ் அருள் புரிவானாக.
+        \n\n
+        பயன்பெறுங்கள், பிறருக்கு அறிமுகப்படுத்துங்கள்!
+       \n\n
+        உமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம்\n(அல்குர்ஆன் மற்றும் நபிமொழிப் பணியாளர்)
        தாருல் ஹுதா, சென்னை-1.
-       \ndarulhuda.chennai@gmail.com, muftiomar@gmail.com
-       \n+91 98401 74121,\n+91 98844 69044,\n+91 44 25247866</string>
+       \n
+        darulhuda.chennai@gmail.com, muftiomar@gmail.com
+       \n
+        +91 98401 74121,\n+91 98844 69044,\n+91 44 25247866</string>
 
 </resources>
