--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
        தோழர்கள், அவர்களைப் பின்பற்றும் நல்லோர் அனைவர் மீதும் ஸலவாத்தும் ஸலாமும் உண்டாகட்டும்.
        \n\nஅஷ்ஷைக் ஸயீது இப்னு அலீ அல்கஹ்தானி அவர்களின் \"குர்ஆன், ஹதீஸ் கூறும் பிரார்த்தனை\"
         என்னும் பிரசித்திபெற்ற அரபி நூலின் தமிழாக்கம் இது.
-        \n\nஇதை வெளியிட அங்கிகரித்த முப்தி உமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம் அவர்களுக்கு அல்லாஹ் அருள் புரிவானாக.
+       <!-- \n\nஇதை வெளியிட அங்கிகரித்த முப்தி உமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம் அவர்களுக்கு அல்லாஹ் அருள் புரிவானாக.-->
         \n\nபயன்பெறுங்கள், பிறருக்கு அறிமுகப்படுத்துங்கள்!
        \n\nஉமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம்\n(அல்குர்ஆன் மற்றும் நபிமொழிப் பணியாளர்)
        தாருல் ஹுதா, சென்னை-1.
